update exponents in LJ objective function

--- a/sr_for_lj_potential.ipynb
+++ b/sr_for_lj_potential.ipynb
@@ -562,8 +562,8 @@
       "cell_type": "code",
       "source": [
         "function lj_potential_structure((; attr_func, rep_func), (rad, ))\n",
-        "  _attr_func = attr_func(rad)^-6\n",
-        "  _rep_func = rep_func(rad)^-3\n",
+        "  _attr_func = attr_func(rad)^-3\n",
+        "  _rep_func = rep_func(rad)^-1.5\n",
         "\n",
         "  out = map((attr_func_i, rep_func_i) -> (attr_func_i - rep_func_i), _attr_func.x, _rep_func.x)\n",
         "  return ValidVector(out, _attr_func.valid && _rep_func.valid)\n",
@@ -575,9 +575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hKPBPTfzuzvd",
-        "outputId": "f5188e0d-cdca-4a61-f987-7310c7e5bd3a"
+        "outputId": "ffe6fe61-c602-4b19-be7e-4f5e34229de9"
       },
-      "execution_count": 57,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 64
         }
       ]
     },
@@ -616,45 +616,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cr4JsfK1y86B",
-        "outputId": "080150f5-8aad-49d2-bc35-5a5fb684d119"
+        "outputId": "3b990d37-59c5-4153-e774-fe35823453bc"
       },
-      "execution_count": 56,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "100-element Vector{Float64}:\n",
-              " -4.2342663500945166e-6\n",
-              " -7.769415784949598e-6\n",
-              " -0.12578913483097476\n",
-              "  5.936921461826293e7\n",
-              " -0.0005384476348949936\n",
-              " -0.00020643753776723449\n",
-              " -0.000424749282769969\n",
-              " -0.008211956926213494\n",
-              " -0.00028134278269407244\n",
-              "  1.025058717663522e23\n",
-              " -9.901873313033654e-6\n",
-              " -0.002098908963473346\n",
-              " -9.391888619422615e-6\n",
-              "  ⋮\n",
-              " -8.394908892636549e-5\n",
-              " -1.4295550005134211e-5\n",
-              " -9.692862028183316e-5\n",
-              " -6.900273056495563e-6\n",
-              " -0.0002459593774332056\n",
-              " -1.066925718413071e-5\n",
-              " -1.1210394091627513e-5\n",
-              " -0.6176838998719174\n",
-              " -0.0004284239471269967\n",
-              " -0.00018727719432120124\n",
-              " -0.0006352153753559467\n",
-              "  6.753834955005477e15"
+              "     -0.0005007575459263957\n",
+              "     -0.0007769811540452141\n",
+              "     -3.187137686910277e-5\n",
+              "     -9.737150709553822e-5\n",
+              "      1.7134773871553502e16\n",
+              "     -0.28538415571504355\n",
+              "     -0.0004638018451420975\n",
+              "      1.0154424763174711e21\n",
+              "     -0.0002569682761731917\n",
+              "     -0.0028727453796886133\n",
+              "     -7.145281450779754e-6\n",
+              "     -1.6312724356905677e-5\n",
+              "     -0.004615261197540061\n",
+              "      ⋮\n",
+              "     -0.0003871659879689508\n",
+              "     -9.843394648958751e-6\n",
+              "     -6.559705709498522e-5\n",
+              "     -0.0006607965573185761\n",
+              "     -1.0052088837764161e-5\n",
+              "     -3.248707544933319e-5\n",
+              "     -1.5703568003173557e-5\n",
+              "     -0.006125930467049535\n",
+              "     -7.599472220256945e-6\n",
+              "     19.794550900898567\n",
+              "     -0.00041654801666474205\n",
+              " 894484.8816558828"
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 65
         }
       ]
     },
@@ -668,19 +668,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LT06OWDlpNTq",
-        "outputId": "f8a28ff8-fdb1-4437-9754-971e5b8e4700"
+        "outputId": "2bf7db44-6147-4656-cac9-159b66e361c4"
       },
-      "execution_count": 58,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "#47 (generic function with 1 method)"
+              "#53 (generic function with 1 method)"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 66
         }
       ]
     },
@@ -688,13 +688,11 @@
       "cell_type": "code",
       "source": [
         "model = SRRegressor(;\n",
-        "    binary_operators=(+, *, /),\n",
-        "    #unary_operators=(sin,),\n",
+        "    binary_operators=(*, ),\n",
         "    maxsize=15,\n",
         "    elementwise_loss=elementwise_loss,\n",
         "    expression_type=TemplateExpression,\n",
         "    # Note - this is where we pass custom options to the expression type:\n",
-        "    #expression_options=(; structure),\n",
         "    expression_options=(; structure = lj_structure),\n",
         ")\n",
         "\n",
@@ -706,9 +704,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B3UxT67IpQh5",
-        "outputId": "92ddfdf2-2001-462d-f41f-46a30f8eb2f3"
+        "outputId": "fd692e53-dabf-4b54-dd33-df9c9a72105e"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,10 +716,54 @@
             "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39m - To prevent this behaviour, do `ProgressMeter.ijulia_behavior(:append)`. \n",
             "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39m - To disable this warning message, do `ProgressMeter.ijulia_behavior(:clear)`.\n",
             "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ ProgressMeter ~/.julia/packages/ProgressMeter/kVZZH/src/ProgressMeter.jl:594\u001b[39m\n",
-            "\r\u001b[32mEvolving for 100 iterations...  61%|████████████████████████▉                |  ETA: 0:01:46\u001b[39m\r\n",
-            "\u001b[39m  Info:          Full dataset evaluations per second: 5.53e+04. Press 'q' and then <enter> to stop execution early.\u001b[39m\r\n",
-            "\u001b[39m  Hall of Fame:                                                                                     ─────────────────────────────────────────────────────────────────────────────────────────────────── Complexity  Loss       Score      Equation                                                          2           1.040e+44  1.802e+01  ╭ attr_func = -0.00031493                                                                           ╰ rep_func = 0.0080254                                            4           6.852e+36  8.268e+00  ╭ attr_func = #1 * 0.010771                                                                         ╰ rep_func = 1.6042e-06                                           6           4.867e+17  1.802e+01  ╭ attr_func = (#1 * #1) * 0.7937                                                                    ╰ rep_func = -0.0025265                                           8           9.718e+11  6.562e+00  ╭ attr_func = (#1 * #1) * 0.7937                                                                    ╰ rep_func = #1 * 0.034594                                        12          2.876e+11  3.044e-01  ╭ attr_func = (#1 * #1) * 0.7937                                                                    ╰ rep_func = #1 * (0.051879 / (#1 + 1.4864))                      14          2.448e+11  8.045e-02  ╭ attr_func = (#1 * #1) * 0.7937                                                                    ╰ rep_func = (#1 * 0.051879) / ((#1 / 1.0355) + 1.4864)           ─────────────────────────────────────────────────────────────────────────────────────────────────── \u001b[39m"
+            "\r\u001b[32mEvolving for 100 iterations... 100%|█████████████████████████████████████████| Time: 0:03:09\u001b[39m\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "───────────────────────────────────────────────────────────────────────────────────────────────────\n",
+            "Complexity  Loss       Score      Equation\n",
+            "2           1.021e+40  1.802e+01  ╭ attr_func = 4.6179e-07\n",
+            "                                  ╰ rep_func = 0.0097812\n",
+            "4           6.212e+37  2.551e+00  ╭ attr_func = #1 * 4.9993e-06\n",
+            "                                  ╰ rep_func = 9.8468e-13\n",
+            "6           2.125e+35  2.839e+00  ╭ attr_func = #1 * (#1 * 0.00025035)\n",
+            "                                  ╰ rep_func = 6.366e-12\n",
+            "8           6.971e+32  2.860e+00  ╭ attr_func = (#1 * (#1 * #1)) * 0.012558\n",
+            "                                  ╰ rep_func = 4.3749e-11\n",
+            "10          8.394e+14  1.802e+01  ╭ attr_func = #1 * ((#1 * (#1 * 0.62996)) * #1)\n",
+            "                                  ╰ rep_func = 3.881e-05\n",
+            "12          7.049e+14  8.732e-02  ╭ attr_func = ((#1 * #1) * 0.62996) * (#1 * #1)\n",
+            "                                  ╰ rep_func = #1 * 0.00020485\n",
+            "14          9.984e+13  9.773e-01  ╭ attr_func = (((#1 * #1) * #1) * 0.62996) * #1\n",
+            "                                  ╰ rep_func = #1 * (#1 * 0.00088206)\n",
+            "───────────────────────────────────────────────────────────────────────────────────────────────────\n",
+            "  - outputs/20241126_100802_H21HM3/hall_of_fame.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mFinal population:\n",
+            "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mResults saved to:\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "trained Machine; caches model-specific representations of data\n",
+              "  model: SRRegressor(defaults = nothing, …)\n",
+              "  args: \n",
+              "    1:\tSource @335 ⏎ AbstractMatrix{ScientificTypesBase.Continuous}\n",
+              "    2:\tSource @150 ⏎ AbstractVector{ScientificTypesBase.Continuous}\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
         }
       ]
     },
@@ -731,10 +773,30 @@
         "report(mach)"
       ],
       "metadata": {
-        "id": "cHRX0Ql-pUgQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cHRX0Ql-pUgQ",
+        "outputId": "c99f95d5-0060-4a24-8909-e7b0dc286772"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(best_idx = 7,\n",
+              " equations = TemplateExpression{Float64, TemplateStructure{(:attr_func, :rep_func), typeof(lj_potential_structure), @NamedTuple{attr_func::Int64, rep_func::Int64}}, Node{Float64}, ComposableExpression{Float64, Node{Float64}, @NamedTuple{operators::DynamicExpressions.OperatorEnumModule.OperatorEnum{Tuple{typeof(*)}, Tuple{}}, variable_names::Nothing}}, @NamedTuple{attr_func::ComposableExpression{Float64, Node{Float64}, @NamedTuple{operators::DynamicExpressions.OperatorEnumModule.OperatorEnum{Tuple{typeof(*)}, Tuple{}}, variable_names::Nothing}}, rep_func::ComposableExpression{Float64, Node{Float64}, @NamedTuple{operators::DynamicExpressions.OperatorEnumModule.OperatorEnum{Tuple{typeof(*)}, Tuple{}}, variable_names::Nothing}}}, @NamedTuple{structure::TemplateStructure{(:attr_func, :rep_func), typeof(lj_potential_structure), @NamedTuple{attr_func::Int64, rep_func::Int64}}, operators::DynamicExpressions.OperatorEnumModule.OperatorEnum{Tuple{typeof(*)}, Tuple{}}, variable_names::Vector{String}}}[attr_func = 4.617906958395142e-7; rep_func = 0.00978116441022682, attr_func = #1 * 4.999261451460222e-6; rep_func = 9.84684847627547e-13, attr_func = #1 * (#1 * 0.00025035217888562893); rep_func = 6.365976882495876e-12, attr_func = (#1 * (#1 * #1)) * 0.012558287174725229; rep_func = 4.37487203506274e-11, attr_func = #1 * ((#1 * (#1 * 0.6299605249606117)) * #1); rep_func = 3.880995813366781e-5, attr_func = ((#1 * #1) * 0.6299605249606076) * (#1 * #1); rep_func = #1 * 0.0002048533372223608, attr_func = (((#1 * #1) * #1) * 0.6299605249596201) * #1; rep_func = #1 * (#1 * 0.0008820612603386834)],\n",
+              " equation_strings = StyledStrings.AnnotatedStrings.AnnotatedString{String}[StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = 4.617906958395142e-7; rep_func = 0.00978116441022682\", []), StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = #1 * 4.999261451460222e-6; rep_func = 9.84684847627547e-13\", []), StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = #1 * (#1 * 0.00025035217888562893); rep_func = 6.365976882495876e-12\", []), StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = (#1 * (#1 * #1)) * 0.012558287174725229; rep_func = 4.37487203506274e-11\", []), StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = #1 * ((#1 * (#1 * 0.6299605249606117)) * #1); rep_func = 3.880995813366781e-5\", []), StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = ((#1 * #1) * 0.6299605249606076) * (#1 * #1); rep_func = #1 * 0.0002048533372223608\", []), StyledStrings.AnnotatedStrings.AnnotatedString{String}(\"attr_func = (((#1 * #1) * #1) * 0.6299605249596201) * #1; rep_func = #1 * (#1 * 0.0008820612603386834)\", [])],\n",
+              " losses = [1.02081175288288e40, 6.212221349272016e37, 2.124743789304275e35, 6.971316507194489e32, 8.394147359890319e14, 7.049116442431269e14, 9.983507403219677e13],\n",
+              " complexities = [2, 4, 6, 8, 10, 12, 14],\n",
+              " scores = [18.021826694558577, 2.5509174443736837, 2.839018748900422, 2.859801207731629, 18.019122632350037, 0.08731621924280536, 0.9772764514296628],)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -743,13 +805,29 @@
         "idx = r.best_idx\n",
         "best_expr = r.equations[idx]\n",
         "best_attr = get_contents(best_expr).attr_func\n",
-        "best_rep = get_contents(best_expr).rep_func\n"
+        "best_rep = get_contents(best_expr).rep_func\n",
+        "\n",
+        "print(\"Attr term: \", best_attr)\n",
+        "print(\"\\nRep term: \", best_rep)\n"
       ],
       "metadata": {
-        "id": "i-LP1M5kpXtv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i-LP1M5kpXtv",
+        "outputId": "35269bc1-39f9-40a6-c6e0-81d72b09ca1f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attr term: (((x1 * x1) * x1) * 0.6299605249596201) * x1\n",
+            "Rep term: x1 * (x1 * 0.0008820612603386834)"
+          ]
+        }
+      ]
     }
   ]
 }
