WIP 1/n: add GAMDSR class as in interface to E2E process

--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -4303,13 +4303,73 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### GAMD-SR class for setting up the E2E process"
+      ],
+      "metadata": {
+        "id": "4N5ktJC7GI2h"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "ApCGIefqSwMT"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class GAMDSR(object):\n",
+        "  def __init__(self, dataset_type, generate_dataset, dataset_dir, openmm_config, gamd_model_config, sr_config, iid_dataset_dir, ood_dataset_dir):\n",
+        "    pass\n",
+        "  def run(self):\n",
+        "    # setup dataset, dataloader and GAMD model\n",
+        "    if dataset_type == 'lj':\n",
+        "      if generate_dataset:\n",
+        "        raw_dataset_dir = generate_lj_dataset(openmm_config)\n",
+        "      else:\n",
+        "        raw_dataset_dir = dataset_dir\n",
+        "      dataset =\n",
+        "      dataloader =\n",
+        "      model = SimpleMDNet(gamd_model_config)\n",
+        "    elif dataset_type == 'tip3p':\n",
+        "      if generate_dataset:\n",
+        "        raw_dataset_dir = generate_tip3p_dataset(openmm_config)\n",
+        "      else:\n",
+        "        raw_dataset_dir = dataset_dir\n",
+        "      dataset =\n",
+        "      dataloader =\n",
+        "      model = WaterMDNet(gamd_model_config)\n",
+        "    elif dataset_type == 'tip4p':\n",
+        "      if generate_dataset:\n",
+        "        raw_dataset_dir = generate_tip4p_dataset(openmm_config)\n",
+        "      else:\n",
+        "        raw_dataset_dir = dataset_dir\n",
+        "      dataset =\n",
+        "      dataloader =\n",
+        "      model = WaterMDNet(gamd_model_config)\n",
+        "    else:\n",
+        "      if generate_dataset:\n",
+        "        raw_dataset_dir = generate_dft_dataset(openmm_config)\n",
+        "      else:\n",
+        "        raw_dataset_dir = dataset_dir\n",
+        "      dataset =\n",
+        "      dataloader =\n",
+        "      model = WaterMDNetDynamic(gamd_model_config)\n",
+        "    if gamd_model_config.model == 'train':\n",
+        "      model.fit()\n",
+        "    if gamd_model_config.mode == 'eval':\n",
+        "      model.load_state_dict(gamd_model_config.checkpoint_dir)\n",
+        "\n",
+        "    # record edge messages\n",
+        "    edge_msg_dict = generate_edge_msg_dict(dataloader, model)\n",
+        "\n",
+        "    # check for linearity hypothesis\n",
+        "    fit_score_potential = are_edge_msg_pair_potential_correlated(edge_msg_dict, dataset_type)\n",
+        "    fit_score_force = are_edge_msg_pair_force_correlated(edge_msg_dict, dataset_type)\n",
+        "\n",
+        ""
+      ]
     }
   ]
 }
