update init method

--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -4320,41 +4320,50 @@
       "outputs": [],
       "source": [
         "class GAMDSR(object):\n",
-        "  def __init__(self, dataset_type, generate_dataset, dataset_dir, openmm_config, gamd_model_config, sr_config, iid_dataset_dir, ood_dataset_dir):\n",
-        "    pass\n",
+        "  def __init__(self, dataset_config, GAMD_config, SR_config, eval_config)\n",
+        "    self.dataset_config = dataset_config\n",
+        "    self.gamd_config = GAMD_config\n",
+        "    self.SR_config = SR_config\n",
+        "    self.eval_config = eval_config\n",
+        "\n",
         "  def run(self):\n",
         "    # setup dataset, dataloader and GAMD model\n",
+        "    dataset_type = self.dataset_config.dataset_type\n",
+        "    generate_dataset = self.dataset_config.generate_dataset\n",
+        "    dataset_dir = self.dataset_config.dataset_dir\n",
+        "    openmm_config = self.dataset_config.openmm_config\n",
+        "\n",
         "    if dataset_type == 'lj':\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_lj_dataset(openmm_config)\n",
         "      else:\n",
         "        raw_dataset_dir = dataset_dir\n",
-        "      dataset =\n",
-        "      dataloader =\n",
+        "      dataset = LJDataset(raw_dataset_dir)\n",
+        "      dataloader = Dataloader()\n",
         "      model = SimpleMDNet(gamd_model_config)\n",
         "    elif dataset_type == 'tip3p':\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_tip3p_dataset(openmm_config)\n",
         "      else:\n",
         "        raw_dataset_dir = dataset_dir\n",
-        "      dataset =\n",
-        "      dataloader =\n",
+        "      dataset = WarerDatasetNew(raw_dataset_dir)\n",
+        "      dataloader = Dataloader(dataset)\n",
         "      model = WaterMDNet(gamd_model_config)\n",
         "    elif dataset_type == 'tip4p':\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_tip4p_dataset(openmm_config)\n",
         "      else:\n",
         "        raw_dataset_dir = dataset_dir\n",
-        "      dataset =\n",
-        "      dataloader =\n",
+        "      dataset = WaterDatasetNew(raw_dataset_dir)\n",
+        "      dataloader = Dataloader(dataset)\n",
         "      model = WaterMDNet(gamd_model_config)\n",
         "    else:\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_dft_dataset(openmm_config)\n",
         "      else:\n",
         "        raw_dataset_dir = dataset_dir\n",
-        "      dataset =\n",
-        "      dataloader =\n",
+        "      dataset = WaterDatasetLarge(raw_dataset_dir)\n",
+        "      dataloader = Dataloader(dataset)\n",
         "      model = WaterMDNetDynamic(gamd_model_config)\n",
         "    if gamd_model_config.model == 'train':\n",
         "      model.fit()\n",
@@ -4367,8 +4376,7 @@
         "    # check for linearity hypothesis\n",
         "    fit_score_potential = are_edge_msg_pair_potential_correlated(edge_msg_dict, dataset_type)\n",
         "    fit_score_force = are_edge_msg_pair_force_correlated(edge_msg_dict, dataset_type)\n",
-        "\n",
-        ""
+        "\n"
       ]
     }
   ]
