--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -4315,9 +4315,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ApCGIefqSwMT"
+        "id": "ApCGIefqSwMT",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "e9895598-da35-41f9-c0b5-aadbfd5fddde"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "expected ':' (<ipython-input-1-18a2f9fe3e46>, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-18a2f9fe3e46>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def __init__(self, dataset_config, GAMD_config, SR_config, eval_config)\u001b[0m\n\u001b[0m                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+          ]
+        }
+      ],
       "source": [
         "class GAMDSR(object):\n",
         "  def __init__(self, dataset_config, GAMD_config, SR_config, eval_config)\n",
@@ -4341,6 +4355,7 @@
         "      dataset = LJDataset(raw_dataset_dir)\n",
         "      dataloader = Dataloader()\n",
         "      model = SimpleMDNet(gamd_model_config)\n",
+        "      sr_inputs = dict(radial_dist, dx, dy, dz) # TODO\n",
         "    elif dataset_type == 'tip3p':\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_tip3p_dataset(openmm_config)\n",
@@ -4349,6 +4364,7 @@
         "      dataset = WarerDatasetNew(raw_dataset_dir)\n",
         "      dataloader = Dataloader(dataset)\n",
         "      model = WaterMDNet(gamd_model_config)\n",
+        "      sr_inputs = dict(radial_dist, dx, dy, dz, theta, charge1, charge2) # TODO\n",
         "    elif dataset_type == 'tip4p':\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_tip4p_dataset(openmm_config)\n",
@@ -4357,6 +4373,7 @@
         "      dataset = WaterDatasetNew(raw_dataset_dir)\n",
         "      dataloader = Dataloader(dataset)\n",
         "      model = WaterMDNet(gamd_model_config)\n",
+        "      sr_inputs = dict(radial_dist, dx, dy, dz, theta, charge1, charge2) # TODO\n",
         "    else:\n",
         "      if generate_dataset:\n",
         "        raw_dataset_dir = generate_dft_dataset(openmm_config)\n",
@@ -4365,6 +4382,7 @@
         "      dataset = WaterDatasetLarge(raw_dataset_dir)\n",
         "      dataloader = Dataloader(dataset)\n",
         "      model = WaterMDNetDynamic(gamd_model_config)\n",
+        "      sr_inputs = dict(radial_dist, dx, dy, dz, theta, charge1, charge2) # TODO\n",
         "    if gamd_model_config.model == 'train':\n",
         "      model.fit()\n",
         "    if gamd_model_config.mode == 'eval':\n",
@@ -4376,8 +4394,85 @@
         "    # check for linearity hypothesis\n",
         "    fit_score_potential = are_edge_msg_pair_potential_correlated(edge_msg_dict, dataset_type)\n",
         "    fit_score_force = are_edge_msg_pair_force_correlated(edge_msg_dict, dataset_type)\n",
-        "\n"
+        "\n",
+        "    print(\"Fit score for pair potential is: \", fit_score_potential)\n",
+        "    print(\"Fit score for pair force is: \", fit_score_force)\n",
+        "\n",
+        "    # setup SR model\n",
+        "    # prepare inputs for SR\n",
+        "    sr_inputs, sr_outputs = regularize_sr_input_outputs(sr_inputs, edge_msg_dict)\n",
+        "    regress_edge_message_equations(sr_inputs, sr_outputs, sr_config)\n",
+        "    # evalute GNN over IID and OOD datasets\n",
+        "    for inductive_bias\n",
+        "    evaluate(model, iid_dataset, ood_dataset)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "question_dict = {\n",
+        "    'dataset_config': {\n",
+        "    'dataset_type':,\n",
+        "    'generate_dataset?':,\n",
+        "    'pregenerated_dataset_dirs':{'train_val_dir':, 'ood_data_dir': },\n",
+        "    'openmm_config':{\n",
+        "        'train_val_config':{'box_size':,\n",
+        "        'rad_cutoff':,\n",
+        "        'custom_potential_expression':,\n",
+        "        'output_dir: ',\n",
+        "    },\n",
+        "         'ood_config': {'box_size':,\n",
+        "        'rad_cutoff':,\n",
+        "        'custom_potential_expression':,\n",
+        "        'output_dir: ', }\n",
+        "          },\n",
+        "    'export_movie?':,\n",
+        "    'movie_simulation_id':,\n",
+        "    'movie_sim_frame_range': [start_frame, end_frame],\n",
+        "    'movie_output_dir':,\n",
+        "},\n",
+        "    'GAMD_config': {\n",
+        "        'train_model?':,\n",
+        "        'pretrained_model_checkpoint_dir':,\n",
+        "        'model_param_config':{\n",
+        "            'num_mp_layers':,\n",
+        "            'embedding_dim':,\n",
+        "            'hidden_dims':,\n",
+        "\n",
+        "        }\n",
+        "        'model_hyperparam_config':{\n",
+        "            'loss_fn':,\n",
+        "            'lr':\n",
+        "            'reg_factor':,\n",
+        "            'n_epochs':,\n",
+        "            'batch_size':\n",
+        "        }\n",
+        "    },\n",
+        "    'SR_config':{\n",
+        "        'input_config':{\n",
+        "            'preprocessing_pipeline':\n",
+        "        },\n",
+        "        'sr_regressor_config':{\n",
+        "            'n_iter':,\n",
+        "            'unary_operators': ,\n",
+        "            'binary_operators': ,\n",
+        "            'custom_operators': ,\n",
+        "            'template_expression':,\n",
+        "            'custom_objective':,\n",
+        "            'model_selection_criteria':,\n",
+        "        }\n",
+        "        'sr_model_checkpoint_dir':\n",
+        "    },\n",
+        "    'eval_config':{\n",
+        "        'metric': ,\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "XvzNHOGUiFY6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
