WIP 2/n: add a sample question dict

--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -4315,32 +4315,19 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ApCGIefqSwMT",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "outputId": "e9895598-da35-41f9-c0b5-aadbfd5fddde"
+        "id": "ApCGIefqSwMT"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "expected ':' (<ipython-input-1-18a2f9fe3e46>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-18a2f9fe3e46>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def __init__(self, dataset_config, GAMD_config, SR_config, eval_config)\u001b[0m\n\u001b[0m                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "class GAMDSR(object):\n",
-        "  def __init__(self, dataset_config, GAMD_config, SR_config, eval_config)\n",
-        "    self.dataset_config = dataset_config\n",
-        "    self.gamd_config = GAMD_config\n",
-        "    self.SR_config = SR_config\n",
-        "    self.eval_config = eval_config\n",
+        "  def __init__(self):\n",
+        "    pass\n",
         "\n",
-        "  def run(self):\n",
+        "  def run(self, question_dict):\n",
+        "\n",
+        "    # parse the question dict to setup pipline to answer that question.\n",
+        "\n",
+        "\n",
         "    # setup dataset, dataloader and GAMD model\n",
         "    dataset_type = self.dataset_config.dataset_type\n",
         "    generate_dataset = self.dataset_config.generate_dataset\n",
@@ -4402,9 +4389,11 @@
         "    # prepare inputs for SR\n",
         "    sr_inputs, sr_outputs = regularize_sr_input_outputs(sr_inputs, edge_msg_dict)\n",
         "    regress_edge_message_equations(sr_inputs, sr_outputs, sr_config)\n",
-        "    # evalute GNN over IID and OOD datasets\n",
-        "    for inductive_bias\n",
-        "    evaluate(model, iid_dataset, ood_dataset)"
+        "\n",
+        "  def evaluate(self, questions_dict):\n",
+        "    for question in questions_dict:\n",
+        "      model_checkpoint, sr_checkpoint = self.run(question)\n",
+        "      compute_answer(model_checkpoint, sr_checkpoint, iid_dataset, ood_dataset, output_dir)"
       ]
     },
     {
@@ -4412,64 +4401,100 @@
       "source": [
         "question_dict = {\n",
         "    'dataset_config': {\n",
-        "    'dataset_type':,\n",
-        "    'generate_dataset?':,\n",
-        "    'pregenerated_dataset_dirs':{'train_val_dir':, 'ood_data_dir': },\n",
-        "    'openmm_config':{\n",
-        "        'train_val_config':{'box_size':,\n",
-        "        'rad_cutoff':,\n",
-        "        'custom_potential_expression':,\n",
-        "        'output_dir: ',\n",
-        "    },\n",
-        "         'ood_config': {'box_size':,\n",
-        "        'rad_cutoff':,\n",
-        "        'custom_potential_expression':,\n",
-        "        'output_dir: ', }\n",
-        "          },\n",
-        "    'export_movie?':,\n",
-        "    'movie_simulation_id':,\n",
-        "    'movie_sim_frame_range': [start_frame, end_frame],\n",
-        "    'movie_output_dir':,\n",
-        "},\n",
+        "                        'dataset_type': 'LJ',\n",
+        "                        'generate_dataset?': 'n',\n",
+        "                        'pregenerated_dataset_dirs':{'train_val_dir':'top',\n",
+        "                                                     'ood_data_dir': 'top_ood'},\n",
+        "                        'openmm_config':{\n",
+        "                                        'train_val_config':\n",
+        "                                                          {\n",
+        "                                                              'num_particles': 258,\n",
+        "                                                              'particle_type' : 'Ar',\n",
+        "                                                              'num_iters': 1000\n",
+        "                                                              'steps_per_iter': 50\n",
+        "                                                              'reduced_density' : 0.05,\n",
+        "                                                              'box_size':27.27,\n",
+        "                                                          'rad_cutoff': 10.2,\n",
+        "                                                          'custom_potential_expression': 'n',\n",
+        "                                                            'output_dir': 'top/run_1',\n",
+        "                                                          },\n",
+        "                                      'ood_config':\n",
+        "                                                  {\n",
+        "                                                      'num_particles': 1000,\n",
+        "                                                      'particle_type' : 'Ne',\n",
+        "                                                      'num_iters': 1000\n",
+        "                                                      'steps_per_iter': 50\n",
+        "                                                      'reduced_density' : 0.5,\n",
+        "                                                      'rad_cutoff': 15.2,\n",
+        "                                                      'custom_potential_expression': 'n',\n",
+        "                                                      'output_dir': 'top_ood/run_1',\n",
+        "                                                      }\n",
+        "                                    },\n",
+        "                        'export_movie?': 'y',\n",
+        "                        'movie_simulation_dir': 'top/run_1',\n",
+        "                        'movie_sim_frame_range': [500, 999],\n",
+        "                        'movie_output_dir':'sim_movies/run_1/',\n",
+        "                    },\n",
         "    'GAMD_config': {\n",
-        "        'train_model?':,\n",
-        "        'pretrained_model_checkpoint_dir':,\n",
+        "        'train_model?': 'n',\n",
+        "        'pretrained_model_checkpoint_dir': 'gamd_model_ckpt_dir/version_5/',\n",
         "        'model_param_config':{\n",
-        "            'num_mp_layers':,\n",
-        "            'embedding_dim':,\n",
-        "            'hidden_dims':,\n",
-        "\n",
-        "        }\n",
+        "                  'in_feats' : 1 ,\n",
+        "                 'encoding_size' : 128,\n",
+        "                 'out_feats' : 3 ,\n",
+        "                 'box_size' : 27.27 ,\n",
+        "                 'bond' :None,       #\n",
+        "                 'hidden_dim':128,\n",
+        "                 'conv_layer':4,\n",
+        "                 'edge_embedding_dim':128,\n",
+        "                 'dropout':0.1,\n",
+        "                 'drop_edge':True,\n",
+        "                 'use_layer_norm': False,\n",
+        "                            }\n",
         "        'model_hyperparam_config':{\n",
-        "            'loss_fn':,\n",
-        "            'lr':\n",
-        "            'reg_factor':,\n",
-        "            'n_epochs':,\n",
-        "            'batch_size':\n",
-        "        }\n",
-        "    },\n",
+        "                                'loss_fn': 'constrained_edge_std',\n",
+        "                                'lr': 0.00001,\n",
+        "                                'reg_factor': 0.001,\n",
+        "                                'n_epochs': 30,\n",
+        "                                'batch_size': 1,\n",
+        "                                }\n",
+        "                },\n",
         "    'SR_config':{\n",
-        "        'input_config':{\n",
-        "            'preprocessing_pipeline':\n",
-        "        },\n",
-        "        'sr_regressor_config':{\n",
-        "            'n_iter':,\n",
-        "            'unary_operators': ,\n",
-        "            'binary_operators': ,\n",
-        "            'custom_operators': ,\n",
-        "            'template_expression':,\n",
-        "            'custom_objective':,\n",
-        "            'model_selection_criteria':,\n",
-        "        }\n",
-        "        'sr_model_checkpoint_dir':\n",
-        "    },\n",
+        "                'input_config':{\n",
+        "                                'preprocessing_pipeline': ['avg_filter']\n",
+        "                              },\n",
+        "                'sr_regressor_config':{\n",
+        "                                      'n_iter': 1000,\n",
+        "                                      'unary_operators': [],\n",
+        "                                      'binary_operators': (*, /),\n",
+        "                                      'custom_operators': ,\n",
+        "                                      'maxsize':25,\n",
+        "                                      'batching':'True',\n",
+        "                                      'template_expression':'TemplateExpression',\n",
+        "                                      'custom_objective':'((x1), (y1)) -> abs(y1 - x1)',\n",
+        "                                      'model_selection_criteria':'SymbolicRegression.MLJInterfaceModule.choose_best',\n",
+        "                                      }\n",
+        "              'sr_model_checkpoint_dir': 'sr_model_ckpt_dir/run_1',\n",
+        "              },\n",
         "    'eval_config':{\n",
-        "        'metric': ,\n",
-        "    }\n",
+        "                  'metric': 'MAE',\n",
+        "                  }\n",
         "}"
       ],
       "metadata": {
         "id": "XvzNHOGUiFY6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gamd_sr = GAMDSR()\n",
+        "gamd_sr.evaluate([question_dict])"
+      ],
+      "metadata": {
+        "id": "KNXozZQXabi6"
       },
       "execution_count": null,
       "outputs": []
