WIP 1/n: define deps

--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -33,17 +33,36 @@
         "2. Keep abstractions limited to experimental data and stable python libraries.\n",
         "\n",
         "## Tasks\n",
-        "1. Loads a dataset from LJ, tip3w, tip4w, DFT\n",
-        "2. Optionally, generates MD dataset by passing a custom potential energy expressions as input\n",
-        "3. Loads relevant GNN model based on dataset complexity\n",
-        "4. Trains GNN and records edge messages of the converged model\n",
-        "5. Test for linearity of fit between pair potential and pair-force vs edge messages\n",
-        "6. Depending on the underlying custom potential, defines SR inputs and outputs\n",
-        "7. Trains SR\n",
-        "8. Plots pred vs gt curve for best SR equation\n",
-        "9. Discusses algorithm alignment of GNNs with the underlying physical phenomenon algorithm.\n",
-        "10. Perhaps demomstrates the benefits of algo. alignment:\n",
-        "   1. Whether algo. alignment is natural in GNNs or it happens becuase of the inductive biases?"
+        "* Concept dependencies:\n",
+        "  1. * SR MAE -> (SR config, SR input, SR output)\n",
+        "     * SR config -> SR params\n",
+        "     * SR input -> per edge physical model priors, like radial dist, pair-charge for the underlying phenomenon\n",
+        "     * SR output -> (edge messages from GNN model)\n",
+        "     * Edge messages from GNN model -> GNN model weights\n",
+        "     * GNN model weights -> GNN params and hyperparams\n",
+        "     * GNN params -> GNN architecture -> Dataset\n",
+        "     * GNN hyperparams -> Loss function -> Inductive bias type\n",
+        "     * Dataset -> Dataset type (LJ, Tip3w, Tip4w, DFT?), simulation configuration\n",
+        "     * Simulation configuration -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)\n",
+        " 2. * GNN MAE over OOD dataset -> GNN model weights, OOD dataset config     \n",
+        "     * GNN model weights -> GNN params and hyperparams\n",
+        "     * GNN params -> GNN architecture -> Dataset\n",
+        "     * GNN hyperparams -> Loss function -> Inductive bias type\n",
+        "     * Dataset -> Dataset type (LJ, Tip3w, Tip4w, DFT?), simulation configuration\n",
+        "     * Simulation configuration (for both train and OOD) -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)\n",
+        "                                              \n",
+        "* For a question (expressed a dictonary) conducts the experiment and returns an answer as:\n",
+        "  1. Loads a dataset from LJ, tip3w, tip4w, DFT\n",
+        "  2. Optionally, generates MD dataset by passing a custom potential energy expressions as input\n",
+        "  3. Loads relevant GNN model based on dataset complexity\n",
+        "  4. Trains GNN and records edge messages of the converged model\n",
+        "  5. Test for linearity of fit between pair potential and pair-force vs edge messages\n",
+        "  6. Depending on the underlying custom potential, defines SR inputs and outputs\n",
+        "  7. Trains SR\n",
+        "  8. Plots pred vs gt curve for best SR equation\n",
+        "  9. Discusses algorithm alignment of GNNs with the underlying physical phenomenon algorithm.\n",
+        "  10. Perhaps demomstrates the benefits of algo. alignment:\n",
+        "    1. Whether algo. alignment is natural in GNNs or it happens becuase of the inductive biases?"
       ],
       "metadata": {
         "id": "zBDelF3uS7n6"
